--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "create-issue.js",
   "scripts": {
+    "start": "node create-issue.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
